<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Medication Guide</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="name_title_dialog">Choose a language</string>
	<string name="name_title_dialog_add_chest">Add to chest</string>
	<string name="fbAppi_ID">332958163565189</string>
	
	<string name="btn_main_list">MAIN LIST</string>
	<string name="btn_chest">CHEST</string>
	<string name="btn_favorite">FAVORITE</string>
	<string name="btn_search">SEARCH</string>
	<string name="btn_bar_code">BAR CODE</string>
	<string name="btn_thanks">THANKS</string>
	<string name="btn_feedback">FEEDBACK</string>
	
	<string name="txt_lenguage_interf">Interface language</string>
	
	 <string name="open_description_str">Open discription</string>
	 <string name="add_favorites_str">Favorites</string>
	 <string name="add_chest_str">Chest</string>
	 
	  <string name="pd_title">Unpacking database</string>
	  <string name="pd_loading">Loading...</string>	
	
	  <string name="start_data">Start data:</string>
	  <string name="end_data">Finish data:</string>	
	  
	  <string name="btn_ok">OK</string>
	  <string name="btn_cancel">Cancel</string>	
	 
			
	
</resources>
