<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    	
    
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:layout_weight = "1">
		
			<com.facebook.widget.LoginButton
			    android:id="@+id/LoginButton"
			    android:layout_width="200dp"
			    android:layout_height="50dp" />
	  
    	</LinearLayout>		
    	
       
		 <LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:layout_weight = "3">

		     <Button
		         android:id="@+id/btn_main_list"
		         android:layout_width="match_parent"
		         android:layout_height="match_parent"
		         android:text="@string/btn_main_list" 
		         android:layout_weight="4" 
		         android:background="@color/color_not_put_button"/>
		     <Button
		         android:id="@+id/btn_chest"
		         android:layout_width="match_parent"
		         android:layout_height="match_parent"
		         android:text="@string/btn_chest" 
		         android:layout_weight="4"
		         android:background="@color/color_not_put_button" />
			<Button
		         android:id="@+id/btn_favorite"
		         android:layout_width="match_parent"
		         android:layout_height="match_parent"
		         android:text="@string/btn_favorite" 
		         android:layout_weight="4" 
		         android:background="@color/color_not_put_button"/>
    	</LinearLayout>	
    	
		<FrameLayout
 			android:id="@+id/frgmCont"
			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_weight="60">
		</FrameLayout>
		 
		<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:layout_weight = "3">
			<Button
		         android:id="@+id/btn_search"
		         android:layout_width="match_parent"
		         android:layout_height="match_parent"
		         android:text="@string/btn_search" 
		         android:layout_weight="4" />

			<Button
		         android:id="@+id/btn_bar_code"
		         android:layout_width="match_parent"
		         android:layout_height="match_parent"
		         android:text="@string/btn_bar_code" 
		         android:layout_weight="4" />
	

			<Button
		         android:id="@+id/btn_thanks"
		         android:layout_width="match_parent"
		         android:layout_height="match_parent"
		         android:text="@string/btn_thanks" 
		         android:layout_weight="4" />
			<Button
		         android:id="@+id/btn_feedback"
		         android:layout_width="match_parent"
		         android:layout_height="match_parent"
		         android:text="@string/btn_feedback" 
		         android:layout_weight="4" />	  
    	</LinearLayout>
    	
    </LinearLayout>

</RelativeLayout>
